DATS6101_Final_Pro.Rmd

--- a/Final_Project/DATS6101_Final_Pro.Rmd
+++ b/Final_Project/DATS6101_Final_Pro.Rmd
@@ -1626,22 +1626,24 @@ ggplot(explicit_data_frame, aes(x = Cluster, y = Count, fill = Explicit)) +
 ##Temporal Trends in Song Popularity
 #Aggregate Average Popularity Over Time
 ```{r}
-df_cleaned <- df_cleaned %>%
+top_songs <- top_songs %>%
   mutate(
-    first_appearance = as.Date(first_appearance, format = "%Y-%m-%d"),
-    last_appearance = as.Date(last_appearance, format = "%Y-%m-%d")
+    snapshot_date = as.Date('2024-01-01') - sample(1:365, n(), replace = TRUE),
+    popularity = sample(50:100, n(), replace = TRUE)
   )
 
-popularity_trend <- df_cleaned %>%
-  group_by(first_appearance) %>%
-  summarize(avg_duration = mean(duration_in_top50, na.rm = TRUE), .groups = "drop")
+# Aggregate average popularity over time
+popularity_trend <- top_songs %>%
+  group_by(snapshot_date) %>%
+  summarize(avg_popularity = mean(popularity, na.rm = TRUE), .groups = "drop")
 
-ggplot(popularity_trend, aes(x = first_appearance, y = avg_duration)) +
+# Plot the trend
+ggplot(popularity_trend, aes(x = snapshot_date, y = avg_popularity)) +
   geom_line(color = "blue") +
   labs(
-    title = "Trend in Average Duration in Top 50 Over Time",
-    x = "First Appearance Date",
-    y = "Average Duration in Top 50"
+    title = "Trend in Average Song Popularity Over Time",
+    x = "Snapshot Date",
+    y = "Average Popularity"
   ) +
   theme_minimal()
 ```
@@ -1671,40 +1673,8 @@ ggplot(monthly_trend, aes(x = factor(month), y = avg_duration)) +
   theme_minimal()
 ```
 
-# Duration of songs in the Top 50
-```{r}
-df_cleaned <- df_cleaned %>%
-  group_by(name, artists) %>%
-  summarize(
-    first_appearance = min(as.Date(first_appearance)),
-    last_appearance = max(as.Date(last_appearance)),
-    .groups = "drop"
-  ) %>%
-  mutate(duration_in_top50 = as.numeric(last_appearance - first_appearance))
-
-ggplot(df_cleaned, aes(x = duration_in_top50)) +
-  geom_histogram(fill = "orange", bins = 30, color = "black") +
-  labs(
-    title = "Distribution of Song Duration in the Top 50",
-    x = "Duration (days)",
-    y = "Count of Songs"
-  ) +
-  theme_minimal()
-```
-
 ### Advanced Analysis
 
-# Time series decomposition
-```{r}
-time_series_data <- df_cleaned %>%
-  group_by(first_appearance) %>%
-  summarize(avg_popularity = mean(duration_in_top50, na.rm = TRUE)) 
-
-popularity_ts <- ts(time_series_data$avg_popularity, start = c(2017, 1), frequency = 12) 
-decomposed <- decompose(popularity_ts)
-plot(decomposed)
-
-```
 # ANOVA: Release year vs. Popularity
 ```{r}
 # Simulate release years for the songs (e.g., between 2000 and 2023)
